[package]
name = "pain"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["canvas"] }
iced_widget = "0.14.2"
iced_wgpu = "0.14.0"
bytemuck = { version = "1", features = ["derive"] }
vello = "0.7.0"
i_overlay = "4.2.2"
i_float = "1.16.0"
truck-modeling = "0.6.0"
truck-topology = "0.6.0"
truck-polymesh = "0.6.0"
truck-shapeops = "0.4.0"