[package]
name = "pain"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["canvas", "advanced"] }
iced_widget = "0.14"
iced_wgpu = "0.14"
iced_aw = { version = "0.13", features = ["full"] }
bytemuck = { version = "1", features = ["derive"] }
vello = "0.7.0"
i_overlay = "4.2.2"
i_float = "1.16.0"
truck-modeling = "0.6.0"
truck-topology = "0.6.0"
truck-polymesh = "0.6.0"
truck-shapeops = "0.4.0"
truck-meshalgo = "0.4.0"
nalgebra-glm = "0.20"
glam = "0.30"
meshx = "0.7.0"
rfd = "0.13"